--- a/main.css
+++ b/main.css
@@ -6,6 +6,9 @@ body {
     background-color: #273643;
     border: 2px solid #848f9b;
 }
+.comments-title{
+    z-index: 3;
+}
 .z-index{
     z-index: 3;
 }
